--- a/AttendanceSystemWebAPI.csproj
+++ b/AttendanceSystemWebAPI.csproj
@@ -19,7 +19,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0-preview3.19553.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0-preview3.19558.8" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
   </ItemGroup>
 
 
+  <ItemGroup>
+    <Folder Include="Filter\" />
+  </ItemGroup>
 </Project>
